<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">35705</string>

    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_default">metric</string>

    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>

    <string name="pref_count_label">Number of days</string>
    <string name="pref_count_key">count</string>
    <string name="pref_count_default">7</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

</resources>