<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory>
        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true"/>

        <ListPreference
            android:title="@string/pref_units_label"
            android:key="@string/pref_units_key"
            android:defaultValue="@string/pref_units_metric"
            android:entryValues="@array/pref_units_values"
            android:entries="@array/pref_units_options"/>

        <SwitchPreference
            android:title="Count by list/ By Numeric"
            android:key="countingWay"
            android:defaultValue="true"/>

        <EditTextPreference
            android:title="@string/pref_count_label"
            android:key="count"
            android:defaultValue="@string/pref_count_default"
            android:inputType="numberDecimal"/>

        <ListPreference
            android:title="@string/pref_count_label"
            android:key="@string/pref_count_key"
            android:defaultValue="7"
            android:entryValues="@array/days"
            android:entries="@array/days"/>

    </PreferenceCategory>
</PreferenceScreen>